--- a/src/main/java/com/mycompany/feedback_mng_sys/SetQuestions.form
+++ b/src/main/java/com/mycompany/feedback_mng_sys/SetQuestions.form
@@ -136,7 +136,7 @@
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtOps1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txtOps2" alignment="3" min="-2" max="-2" attributes="0"/>
