made next and previous button working

--- a/src/main/java/com/mycompany/feedback_mng_sys/SetQuestions.form
+++ b/src/main/java/com/mycompany/feedback_mng_sys/SetQuestions.form
@@ -334,6 +334,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="&lt; Previous"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPreviousActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnCancle">
       <Properties>
